corrected wordwrap long titles latest articles

--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -7502,3 +7502,6 @@ body.modal-open {
 	padding: 5px 10px;
 	overflow: hidden;
 }
+li {
+	word-wrap: break-word;
+}
